57 [fix] 리스트 변경